--- a/shakil.html
+++ b/shakil.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div id="btn">
-      <a href="index.html" target="_self">
+      <a href="himo.html" target="_self">
         <i class="name">Himo</i>
       </a>
       <a href="shakil.html" target="_self">
